完成打开和重新关闭功能
