# packages/issue-static/src/main.ts
@@ -12,7 +12,7 @@ import issueEditor from "./alpine-data/issue-editor";
 import issueUpdateEditor from "./alpine-data/issue-update-editor";
 import issueSubmit from "./alpine-data/issue-submit";
 import {IssueComment, IssueCommentContent, IssueContent} from "./types";
-import {createIssueComment, fetchIssueContent, fetchIssueCommentContent, closedMyIssue} from "./api";
+import {createIssueComment, fetchIssueContent, fetchIssueCommentContent, closedMyIssue, reopenMyIssue} from "./api";
 
 window.Alpine = Alpine;
 Alpine.data("dropdown", dropdown);
@@ -526,5 +526,15 @@ export async function closeIssue(issueName:string, closedComment:string){
         window.location.reload();
     }else{
         messageUtils.showMessage("error", "关闭失败", 1500);
+    }
+}
+
+export async function reopenIssue(issueName:string){
+    const reopenIssueRes = await reopenMyIssue(issueName);
+    if(reopenIssueRes.status == 200){
+        messageUtils.showMessage("success", "操作成功", 1500);
+        window.location.reload();
+    }else{
+        messageUtils.showMessage("error", "操作失败", 1500);
     }
 }
